--- a/docs/howto/wlutz/varian-dicom-example.ipynb
+++ b/docs/howto/wlutz/varian-dicom-example.ipynb
@@ -218,7 +218,7 @@
     "        bb_diameter,\n",
     "        penumbra=2,\n",
     "        fixed_rotation=coll,\n",
-    "        pylinac_tol=None\n",
+    "        pylinac_tol=0.2\n",
     "    )   \n",
     "\n",
     "    pymedphys.wlutz.reporting( \n",
@@ -244,9 +244,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pymedphys-master",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pymedphys-master"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
