--- a/docs/howto/wlutz/varian-dicom-example.ipynb
+++ b/docs/howto/wlutz/varian-dicom-example.ipynb
@@ -259,6 +259,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.0"
+  },
+  "nbsphinx": {
+   "timeout": 600
   }
  },
  "nbformat": 4,
