--- a/docs/howto/gamma/effect-of-noise.ipynb
+++ b/docs/howto/gamma/effect-of-noise.ipynb
@@ -250,16 +250,15 @@
    "outputs": [],
    "source": [
     "dose_eval_noise = (\n",
-    "    np.random.normal(loc=0, scale=noise, size=np.shape(dose_ref)) +\n",
-    "    dose_eval)\n",
+    "    dose_eval + \n",
+    "    np.random.normal(loc=0, scale=noise, size=np.shape(dose_eval))\n",
+    ")\n",
     "\n",
     "plt.figure()\n",
-    "plt.title('Evaluation dose with standard normal noise of {} | Grid = {} cm'.format(noise, grid))\n",
-    "plt.xlabel('x (cm)')\n",
-    "plt.ylabel('y (cm)')\n",
+    "plt.title('Evaluation dose with Noise')\n",
     "\n",
     "plt.imshow(\n",
-    "    dose_eval_noise, clim=(0, 1.04), extent=[-1.8-grid/2, 1.8+grid/2, -1.5-grid/2, 1.5+grid/2])\n",
+    "    dose_eval_noise, clim=(0, 1.04), extent=extent)\n",
     "plt.colorbar();"
    ]
   },
@@ -279,13 +278,11 @@
     "dose_diff_with_noise = dose_eval_noise - dose_ref\n",
     "\n",
     "plt.figure()\n",
-    "plt.title('Dose Difference with Noise'.format(grid, scale_factor))\n",
-    "plt.xlabel('x (cm)')\n",
-    "plt.ylabel('y (cm)')\n",
+    "plt.title('Dose Difference with Noise')\n",
     "\n",
     "plt.imshow(\n",
     "    dose_diff_with_noise, \n",
-    "    clim=(-0.1, 0.1), extent=[-1.8-grid/2, 1.8+grid/2, -1.5-grid/2, 1.5+grid/2],\n",
+    "    clim=(-0.1, 0.1), extent=extent,\n",
     "    cmap='seismic'\n",
     ")\n",
     "plt.colorbar();"
@@ -358,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
