Phys server notebook changes

--- a/examples/site-specific/cancer-care-associates/production/Winston Lutz/Arc Method/Arc Analysis.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Winston Lutz/Arc Method/Arc Analysis.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "working_dir = pathlib.Path(r\"S:\\Physics\\RCCC Specific Files\\Linac Beam Data Record\\Synergy 2619\\QA\\20200109_further_profiler_baselining\\Wlutz\\20200110\")\n",
+    "working_dir = pathlib.Path(r\"S:\\Physics\\RCCC Specific Files\\Linac Beam Data Record\\Synergy 2619\\QA\\20200120_monthly\\WL\")\n",
     "output_dir = working_dir.joinpath('results')\n",
     "output_dir.mkdir(exist_ok=True)"
    ]
@@ -1191,7 +1191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
