--- a/examples/site-specific/cancer-care-associates/production/Winston Lutz/Arc Method/Decoding and Sorting iViewDB.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Winston Lutz/Arc Method/Decoding and Sorting iViewDB.ipynb
@@ -25,6 +25,7 @@
    "outputs": [],
    "source": [
     "original_dir = pathlib.Path(r'S:\\DataExchange\\iViewDB')\n",
+    "# original_dir = pathlib.Path(r'Z:\\iViewDB')\n",
     "decoded_dir = pathlib.Path(r'S:\\DataExchange\\iViewDB_decoded')\n",
     "\n",
     "decoded_dir.mkdir(exist_ok=True)"
@@ -218,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
