update arc notebook, tighten bb search bounds
Former-commit-id: e84c958e213fa7f6642652987d20a63956342dae [formerly 9fe69fd380b7c8e31b0c0d39206392791e643e0d]
Former-commit-id: a3bde4f36ad2c3bb7f35790f0cf5b048cbecf5a2

--- a/examples/site-specific/cancer-care-associates/production/Winston Lutz/Arc Method/Arc Analysis.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Winston Lutz/Arc Method/Arc Analysis.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "working_dir = pathlib.Path(r\"S:\\Physics\\RCCC Specific Files\\Linac Beam Data Record\\Synergy 2619\\QA\\20200120_monthly\\WL\")\n",
+    "working_dir = pathlib.Path(r\"\\\\pdc\\OneDrive$\\RCCC Specific Files\\Linac Beam Data Record\\Synergy 2694\\QA\\20200128_monthly\\WLutz\")\n",
     "output_dir = working_dir.joinpath('results')\n",
     "output_dir.mkdir(exist_ok=True)"
    ]
@@ -206,54 +206,60 @@
    "outputs": [],
    "source": [
     "def plot_pylinac_comparison(field, bb_diameter, edge_lengths, penumbra, field_centre, field_rotation, pylinac):\n",
-    "    bb_centre = pymedphys._wlutz.findbb.optimise_bb_centre(\n",
-    "        field, bb_diameter, edge_lengths, penumbra, field_centre, field_rotation, pylinac_tol=np.inf\n",
-    "    )\n",
-    "    \n",
-    "    fig = pymedphys._wlutz.reporting.image_analysis_figure(\n",
-    "        x,\n",
-    "        y,\n",
-    "        img,\n",
-    "        bb_centre,\n",
-    "        field_centre,\n",
-    "        field_rotation,\n",
-    "        bb_diameter,\n",
-    "        edge_lengths,\n",
-    "        penumbra,\n",
-    "    )\n",
+    "    try:\n",
+    "        bb_centre = pymedphys._wlutz.findbb.optimise_bb_centre(\n",
+    "            field, bb_diameter, edge_lengths, penumbra, field_centre, field_rotation, pylinac_tol=np.inf\n",
+    "        )\n",
     "\n",
-    "    plt.title('PyMedPhys Basinhopping Method')\n",
+    "        fig = pymedphys._wlutz.reporting.image_analysis_figure(\n",
+    "            x,\n",
+    "            y,\n",
+    "            img,\n",
+    "            bb_centre,\n",
+    "            field_centre,\n",
+    "            field_rotation,\n",
+    "            bb_diameter,\n",
+    "            edge_lengths,\n",
+    "            penumbra,\n",
+    "        )\n",
     "\n",
-    "    \n",
-    "    fig = pymedphys._wlutz.reporting.image_analysis_figure(\n",
-    "        x,\n",
-    "        y,\n",
-    "        img,\n",
-    "        pylinac['v2.2.6']['bb_centre'],\n",
-    "        pylinac['v2.2.6']['field_centre'],\n",
-    "        field_rotation,\n",
-    "        bb_diameter,\n",
-    "        edge_lengths,\n",
-    "        penumbra,\n",
-    "    )\n",
+    "        plt.title('PyMedPhys Basinhopping Method')\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
     "\n",
-    "    plt.title('Pylinac v2.2.6 Filter and Profile Method')\n",
+    "    try:\n",
+    "        fig = pymedphys._wlutz.reporting.image_analysis_figure(\n",
+    "            x,\n",
+    "            y,\n",
+    "            img,\n",
+    "            pylinac['v2.2.6']['bb_centre'],\n",
+    "            pylinac['v2.2.6']['field_centre'],\n",
+    "            field_rotation,\n",
+    "            bb_diameter,\n",
+    "            edge_lengths,\n",
+    "            penumbra,\n",
+    "        )\n",
     "\n",
+    "        plt.title('Pylinac v2.2.6 Filter and Profile Method')\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
+    "        \n",
+    "    try:\n",
+    "        fig = pymedphys._wlutz.reporting.image_analysis_figure(\n",
+    "            x,\n",
+    "            y,\n",
+    "            img,\n",
+    "            pylinac['v2.2.7']['bb_centre'],\n",
+    "            pylinac['v2.2.7']['field_centre'],\n",
+    "            field_rotation,\n",
+    "            bb_diameter,\n",
+    "            edge_lengths,\n",
+    "            penumbra,\n",
+    "        )\n",
     "\n",
-    "    fig = pymedphys._wlutz.reporting.image_analysis_figure(\n",
-    "        x,\n",
-    "        y,\n",
-    "        img,\n",
-    "        pylinac['v2.2.7']['bb_centre'],\n",
-    "        pylinac['v2.2.7']['field_centre'],\n",
-    "        field_rotation,\n",
-    "        bb_diameter,\n",
-    "        edge_lengths,\n",
-    "        penumbra,\n",
-    "    )\n",
-    "\n",
-    "    plt.title('Pylinac v2.2.7 Filter and Scikit-Image Method')\n",
-    "\n",
+    "        plt.title('Pylinac v2.2.7 Filter and Scikit-Image Method')\n",
+    "    except Exception as e:\n",
+    "        print(e)\n",
     "    \n",
     "    \n",
     "    plt.show()"
@@ -282,7 +288,7 @@
     "        pymedphys_data['bb_centre']\n",
     "    except KeyError:\n",
     "        print(key)\n",
-    "        x, y, img = pymedphys._wlutz.iview.iview_image_transform(image_path)\n",
+    "        x, y, img = pymedphys._wlutz.iview.iview_image_transform_from_path(image_path)\n",
     "\n",
     "        field = pymedphys._wlutz.imginterp.create_interpolated_field(x, y, img)\n",
     "        initial_centre = pymedphys._wlutz.findfield.get_centre_of_mass(x, y, img)\n",
@@ -294,7 +300,7 @@
     "    \n",
     "        try:\n",
     "            pymedphys_data['field_centre'], pymedphys_data['field_rotation'] = pymedphys._wlutz.findfield.field_centre_and_rotation_refining(\n",
-    "                field, edge_lengths, penumbra, initial_centre, initial_rotation=initial_rotation\n",
+    "                field, edge_lengths, penumbra, initial_centre\n",
     "            )            \n",
     "        except ValueError as e:\n",
     "            print(e)\n",
@@ -323,11 +329,15 @@
     "            )\n",
     "        except pymedphys._wlutz.pylinac.PylinacComparisonDeviation as e:\n",
     "            print(e)\n",
-    " \n",
-    "            plot_pylinac_comparison(\n",
-    "                field, bb_diameter, edge_lengths, penumbra, pymedphys_data['field_centre'], pymedphys_data['field_rotation'],\n",
-    "                this_data['pylinac']\n",
-    "            )\n",
+    "            \n",
+    "            try:\n",
+    "                plot_pylinac_comparison(\n",
+    "                    field, bb_diameter, edge_lengths, penumbra, pymedphys_data['field_centre'], pymedphys_data['field_rotation'],\n",
+    "                    this_data['pylinac']\n",
+    "                )\n",
+    "            except ValueError as e:\n",
+    "                print(e)\n",
+    "                continue\n",
     "\n",
     "            continue\n",
     "        except ValueError as e:\n",
@@ -1173,6 +1183,13 @@
     "\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1191,7 +1208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
