logfile comparison update
Former-commit-id: 6a5f7b5e2018d66416c42acf1de8228ce8ab29db [formerly 6484d9e5c6ed3efa63d25f91e1c1d7c16be4e74a]
Former-commit-id: e2899f716e7e01a7cbc4725e16db97f482e35cbd

--- a/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Direct Logfile Monaco compare.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Direct Logfile Monaco compare.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "logfile_directory = pathlib.Path(r'D:\\LinacLogFiles')\n",
+    "logfile_directory = pathlib.Path(r'\\\\physics-server\\LinacLogFiles')\n",
     "monaco_directory = pathlib.Path(r'\\\\monacoda\\FocalData\\RCCC\\1~Clinical')\n",
     "output_directory = pathlib.Path(r'S:\\Physics\\Patient Specific Logfile Fluence')\n",
     "\n",
@@ -56,8 +56,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "custom_logfile_paths = [pathlib.Path(r'D:\\LinacLogFiles\\archive\\20_01_15 06_22_56 Z .trf')]\n",
-    "# custom_logfile_paths = []"
+    "# custom_logfile_paths = [pathlib.Path(r'\\\\physics-server\\LinacLogFiles\\archive\\20_01_15 06_22_56 Z .trf')]\n",
+    "custom_logfile_paths = []"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Patient ID Cell"
    ]
   },
   {
@@ -66,10 +73,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "patient_id = '013132'\n",
+    "patient_id = '014484'\n",
     "\n",
     "percent_deviation = 2\n",
     "mm_dist_threshold = 0.5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Available Monaco Plans and Mosaiq Sites"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mosaiq Sites"
    ]
   },
   {
@@ -86,6 +107,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Monaco Plans"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -96,13 +124,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Custom Monaco/Mosaiq Alignment"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "monaco_plan_name = 'RTLUNGVMAT'\n",
-    "mosaiq_site = 'RIGHT LUNG RETREAT'"
+    "monaco_plan_name = 'PROSTATE'\n",
+    "mosaiq_site = 'PROSTATE'"
    ]
   },
   {
@@ -231,20 +266,13 @@
     "    except Exception as e:\n",
     "        traceback.print_exc()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pymedphys-master",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pymedphys-master"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -256,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
