various administrative tools
Former-commit-id: 37a0c5a6814f0bea3903819bcf7448c6ca013d47

--- a/examples/site-specific/cancer-care-associates/production/Monaco/De-Archiving GUI/patient_to_be_archived_tool/Archive anything older than given weeks since touched.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Monaco/De-Archiving GUI/patient_to_be_archived_tool/Archive anything older than given weeks since touched.ipynb
@@ -21,6 +21,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "centre = 'rccc'\n",
+    "\n",
+    "number_of_weeks_to_keep = 25"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "directory_map = {\n",
     "    'rccc': {\n",
     "        'search_string': r'\\\\monacoda\\FocalData\\RCCC\\1~Clinical\\*~*\\demographic.*',\n",
@@ -32,19 +43,8 @@
     "        'holding': r'\\\\nbccc-monaco\\Users\\Public\\Documents\\HoldingDirectory',\n",
     "        'archived': r'\\\\nbccc-monaco\\Archive\\Patients'\n",
     "    }\n",
-    "}\n",
-    "\n",
-    "centre = 'rccc'\n",
-    "\n",
-    "number_of_weeks_to_keep = 13"
+    "}"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -224,18 +224,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Move the the result across to its final location via system tools\n",
+    "\n",
+    "Use system tools to move across the data within `\\\\monacoda\\FocalData\\ToBeArchived` to \n",
+    "`\\\\UTILSVR\\PhysBack\\MONACO_ARCHIVE_1` then verify that the data was successfully moved\n",
+    "by running the following.\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in tqdm(range(len(directories_to_be_archived))):    \n",
+    "    assert not(os.path.exists(directories_to_be_archived[i])), \"The move failed to delete the clinical file!\"\n",
+    "    assert not(os.path.exists(location_to_move_to[i])), \"The move failed to delete the holding location!\"\n",
+    "    assert os.path.exists(test_location_to_move_to[i]), \"File not found within archive!\"\n",
+    "    \n",
+    "    print(\"    Done\\n\")"
+   ]
   }
  ],
  "metadata": {
@@ -255,9 +267,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
