update icom notebook
Former-commit-id: e687a115f57c82180e4d2723206b05110166827b

--- a/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Compare Monaco and iCOM.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Compare Monaco and iCOM.ipynb
@@ -27,11 +27,11 @@
     "\n",
     "A Windows service is created to listen to the iCOM stream. This service is made from a `.bat` file, an example of which can be seen at:\n",
     "\n",
-    "> https://github.com/CCA-Physics/physics-server/blob/8a0954e5/RCCC/icom/harry_listening.bat\n",
+    "> https://github.com/CCA-Physics/physics-server/blob/69c06ad/RCCC/icom/harry_listening.bat\n",
     "\n",
     "To create this service the [`nssm`](https://nssm.cc/) tool is used, with an example of its usage available at:\n",
     "\n",
-    "> https://github.com/CCA-Physics/physics-server/blob/8a0954e5/RCCC/icom/services-install.bat\n",
+    "> https://github.com/CCA-Physics/physics-server/blob/69c06ad/RCCC/icom/services-install.bat\n",
     "\n",
     "**Warning: Take Note**\n",
     "\n",
@@ -43,7 +43,7 @@
     "\n",
     "For the iCOM stream to be easily indexed in the future deliveries are stored by patient id and name. This is done by setting up a `.bat` file to run on machine boot. An example `.bat` file that achieves this can be seen at:\n",
     "\n",
-    "> https://github.com/CCA-Physics/physics-server/blob/8a0954e5/RCCC/icom/patient_archiving.bat\n",
+    "> https://github.com/CCA-Physics/physics-server/blob/69c06ad/RCCC/icom/patient_archiving.bat\n",
     "\n",
     "### Reading the iCOM file, Monaco file, and comparing them\n",
     "\n",
@@ -127,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "patient_id = '015112'"
+    "patient_id = '015139'"
    ]
   },
   {
@@ -226,7 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_tel_paths = list(monaco_directory.glob(f'*~{patient_id}/plan/*/tel.1'))\n",
+    "all_tel_paths = list(monaco_directory.glob(f'*~{patient_id}/plan/*/*tel.1'))\n",
     "all_tel_paths"
    ]
   },
@@ -237,7 +237,7 @@
    "outputs": [],
    "source": [
     "plan_names_to_choose_from = [\n",
-    "    path.parent.name for path in all_tel_paths\n",
+    "    f'{path.parent.name}/{path.name}' for path in all_tel_paths\n",
     "]\n",
     "plan_names_to_choose_from"
    ]
@@ -286,8 +286,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "monaco_plan_name = 'LeftIlium1'  # plan directory name\n",
-    "icom_delivery = '20200213_133208'  # iCOM timestamp"
+    "monaco_plan_and_file_name = 'DIBHLBREAST/rxB_tel.1'  # plan directory and file name\n",
+    "icom_delivery = '20200214_114704'  # iCOM timestamp"
    ]
   },
   {
@@ -303,7 +303,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tel_path = list(monaco_directory.glob(f'*~{patient_id}/plan/{monaco_plan_name}/tel.1'))[-1]\n",
+    "tel_path = list(monaco_directory.glob(f'*~{patient_id}/plan/{monaco_plan_and_file_name}'))[-1]\n",
     "tel_path"
    ]
   },
@@ -554,7 +554,7 @@
     ")\n",
     "\n",
     "png_filepath = str(results_dir.joinpath(\"result.png\").resolve())\n",
-    "pdf_filepath = str(pdf_directory.joinpath(f\"{patient_id}.pdf\").resolve())\n",
+    "pdf_filepath = str(pdf_directory.joinpath(f\"{patient_id}-{monaco_plan_and_file_name.replace('/','-')}.pdf\").resolve())\n",
     "\n",
     "fig = plot_and_save_results(\n",
     "    mudensity_tel, mudensity_icom, \n",
