allow iCOM to be comparison to accept multiple records
Former-commit-id: 8dc7c8a798e7bb6ec84f492bd90b6c4a44ed34d4

--- a/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Compare Monaco and iCOM.ipynb
+++ b/examples/site-specific/cancer-care-associates/production/Logfiles/MU Density/Compare Monaco and iCOM.ipynb
@@ -127,7 +127,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "patient_id = '015139'"
+    "patient_id = '014495'"
    ]
   },
   {
@@ -286,8 +286,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "monaco_plan_and_file_name = 'DIBHLBREAST/rxB_tel.1'  # plan directory and file name\n",
-    "icom_delivery = '20200214_114704'  # iCOM timestamp"
+    "monaco_plan_and_file_name = 'RAXILLARETREAT/tel.1'  # plan directory and file name\n",
+    "icom_deliveries = ['20020101_054014']  # iCOM timestamps"
    ]
   },
   {
@@ -313,8 +313,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "icom_path = list(icom_directory.glob(f'{patient_id}_*/{icom_delivery}.xz'))[-1]\n",
-    "icom_path"
+    "icom_paths = []\n",
+    "\n",
+    "for icom_delivery in icom_deliveries:\n",
+    "    icom_paths += list(icom_directory.glob(f'{patient_id}_*/{icom_delivery}.xz'))\n",
+    "\n",
+    "icom_paths"
    ]
   },
   {
@@ -332,8 +336,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with lzma.open(icom_path, 'r') as f:\n",
-    "    icom_stream = f.read()"
+    "icom_streams = []\n",
+    "\n",
+    "for icom_path in icom_paths:\n",
+    "    with lzma.open(icom_path, 'r') as f:\n",
+    "        icom_streams += [f.read()]"
    ]
   },
   {
@@ -372,7 +379,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "delivery_icom = pymedphys.Delivery.from_icom(icom_stream)\n",
+    "deliveries_icom = []\n",
+    "\n",
+    "for icom_stream in icom_streams:\n",
+    "    deliveries_icom += [pymedphys.Delivery.from_icom(icom_stream)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "delivery_tel = pymedphys.Delivery.from_monaco(tel_path)"
    ]
   },
@@ -391,8 +409,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mudensity_icom = delivery_icom.mudensity()\n",
     "mudensity_tel = delivery_tel.mudensity()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mudensity_icom = np.zeros_like(mudensity_tel)\n",
+    "\n",
+    "for delivery_icom in deliveries_icom:\n",
+    "    mudensity_icom = mudensity_icom + delivery_icom.mudensity()"
    ]
   },
   {
@@ -547,9 +576,11 @@
     "    f\"Plan Name: {tel_path.parent.name}\\n\"\n",
     ")\n",
     "\n",
+    "icom_path_strings = '\\n    '.join([str(icom_path) for icom_path in icom_paths])\n",
+    "\n",
     "footer_text = (\n",
     "    f\"tel.1 file path: {str(tel_path)}\\n\"\n",
-    "    f\"icom file path: {str(icom_path)}\\n\"\n",
+    "    f\"icom file path: {icom_path_strings}\\n\"\n",
     "    f\"results path: {str(results_dir)}\"\n",
     ")\n",
     "\n",
